--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/chef-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chefzia</title>
+  
+    <!-- Correct Google Fonts Import -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
+  
+    <!-- Preload the font with correct crossorigin -->
+    <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/poppins/v22/pxiEyp8kv8JHgFVrJJfecg.woff2" crossorigin="anonymous">
   </head>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
