--- a/client/index.html
+++ b/client/index.html
@@ -7,11 +7,11 @@
     <title>Chefzia</title>
   
     <!-- Correct Google Fonts Import -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap">
   
     <!-- Preload the font with correct crossorigin -->
-    <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/poppins/v22/pxiEyp8kv8JHgFVrJJfecg.woff2" crossorigin="anonymous">
-  </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="anonymous">
+      </head>
   
   <body>
     <div id="root"></div>
